# uniffi-rs

./: CHANGELOG.md  Cargo.toml  mkdocs.yml  versions.json
docs/adr/: 0009-handles.md  0009-remote-types-interfaces-and-proc-macros.md
examples/arithmetic/: Cargo.toml
examples/callbacks/: Cargo.toml
examples/custom-types/: Cargo.toml
examples/geometry/: Cargo.toml
examples/rondpoint/: Cargo.toml
examples/sprites/: Cargo.toml
examples/todolist/: Cargo.toml
fixtures/bindings-internal/: Cargo.toml  uniffi.toml
fixtures/bindings-internal/src/: bindings_internal.udl  lib.rs
fixtures/bindings-internal/tests/: test_generated_bindings.rs
fixtures/bindings-internal/tests/bindings/: test_bindings_internal.kts  test_bindings_internal.py  test_bindings_internal.rb  test_bindings_internal.swift
fixtures/callbacks/: Cargo.toml
fixtures/coverall/: Cargo.toml
fixtures/futures/: Cargo.toml
fixtures/proc-macro/: Cargo.toml
fixtures/reexport-scaffolding-macro/: Cargo.toml
fixtures/simple-fns/: Cargo.toml
fixtures/simple-iface/: Cargo.toml
fixtures/swift-omit-labels/: Cargo.toml
fixtures/uitests/: Cargo.toml
fixtures/uniffi-fixture-time/: Cargo.toml
fixtures/version-mismatch/: README.md  build.rs  swift-contract-mismatch.sh
uniffi/: Cargo.toml
uniffi/src/: lib.rs  testing.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs  library_mode.rs
uniffi_build/: Cargo.toml
uniffi_core/: Cargo.toml
uniffi_core/src/: ffi_converter_impls.rs  ffi_converter_traits.rs  lib.rs  metadata.rs
uniffi_macros/: Cargo.toml
uniffi_meta/src/: lib.rs  (+4 more)
(+143 files in other folders)
